Fixed roomba not showing up on website

--- a/website/hellostyles.css
+++ b/website/hellostyles.css
@@ -76,7 +76,7 @@ body {
     left: 50%;
     width: 5vw;
     height: 5vw;
-    background-image: url('roomba.png');
+    background-image: url('images/roomba.png');
     background-size: cover;
   }
   
